# AeroX-Protect

./: .env.example  .gitignore  AeroXProtect-소개.html  PLAN.md  README.md  config.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
go2rtc/: go2rtc.yaml
migrations/: 0000_init.sql  0001_phase1.sql  0002_phase2.sql  0003_phase3.sql  0004_phase4.sql  0005_phase5.sql  0006_phase6.sql  0007_phase7.sql  0008_phase8.sql  0009_phase9.sql  0010_phase10.sql  0011_recording_duration.sql  0012_dual_record_stream.sql  0013_camera_ai_features.sql  0014_edge_auto_import.sql  0015_rtsp_transport.sql  0016_mark_empty_segments_corrupt.sql  0017_recording_container_mpegts.sql
plan/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
server/: Dockerfile  __init__.py  __main__.py  command.py  decorator.py  docker-entrypoint.sh  exception.py
tests/: _p1_live_check.py  _p2_recording_check.py  _p3_event_check.py  _p4_detection_check.py  _p5_automation_check.py  conftest.py  test_admin_api.py  test_audit_fixes.py  test_audit_fixes2.py  test_auth_api.py  test_automation_v2.py  test_camera_api.py  test_camera_health.py  test_crypto.py  test_dashboard_api.py  test_discovery_api.py  test_disk_scanner.py  test_drivers.py  test_event_api.py  test_event_normalizer.py  test_event_pipeline.py  test_event_resolvers.py  test_go2rtc_sync.py  test_keepwarm.py  (+37 more)
(+437 files in other folders)
